Modified project settings

--- a/project.config
+++ b/project.config
@@ -2,5 +2,11 @@
 	inheritFrom = Public-Plugins
 [project]
 	state = active
+	description = Plug-in to display and navigate Git branches in a HTML5 canvas network
 [access "refs/*"]
 	owner = group plugins-branch-network
+[receive]
+	requireContributorAgreement = true
+	requireChangeId = true
+[submit]
+	mergeContent = true
