--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@ limitations under the License.
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <Gerrit-ApiType>plugin</Gerrit-ApiType>
-    <Gerrit-ApiVersion>2.6-SNAPSHOT</Gerrit-ApiVersion>
+    <Gerrit-ApiVersion>2.8-SNAPSHOT</Gerrit-ApiVersion>
     <Gerrit-ReloadMode>reload</Gerrit-ReloadMode>
     <Gerrit-Module>com.googlesource.gerrit.plugins.branchnetwork.GitCommitCacheModule</Gerrit-Module>
     <Gerrit-HttpModule>com.googlesource.gerrit.plugins.branchnetwork.NetworkGraphModule</Gerrit-HttpModule>
@@ -40,13 +40,7 @@ limitations under the License.
     </dependency>
     <dependency>
       <groupId>com.google.gerrit</groupId>
-      <artifactId>gerrit-server</artifactId>
-      <version>${Gerrit-ApiVersion}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.gerrit</groupId>
-      <artifactId>gerrit-httpd</artifactId>
+      <artifactId>gerrit-${Gerrit-ApiType}-api</artifactId>
       <version>${Gerrit-ApiVersion}</version>
       <scope>provided</scope>
     </dependency>
