Provide constant plugin name: branch-network
Change-Id: Iee3eebbcd08ad0f1e02c2b53182265dc25c94214

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@ limitations under the License.
         <configuration>
           <archive>
             <manifestEntries>
+              <Gerrit-PluginName>branch-network</Gerrit-PluginName>
               <Gerrit-Module>${Gerrit-Module}</Gerrit-Module>
               <Gerrit-HttpModule>${Gerrit-HttpModule}</Gerrit-HttpModule>
               <Implementation-Vendor>GerritForge LLP</Implementation-Vendor>
