--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,13 @@ limitations under the License.
   <modelVersion>4.0.0</modelVersion>
   <artifactId>branch-network</artifactId>
   <groupId>com.googlesource.gerrit.plugins.branchnetwork</groupId>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.12-rc0</version>
   <name>Gerrit - Branch network display plugin</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <Gerrit-ApiType>plugin</Gerrit-ApiType>
-    <Gerrit-ApiVersion>2.9-SNAPSHOT</Gerrit-ApiVersion>
+    <Gerrit-ApiVersion>${project.version}</Gerrit-ApiVersion>
     <Gerrit-ReloadMode>reload</Gerrit-ReloadMode>
     <Gerrit-Module>com.googlesource.gerrit.plugins.branchnetwork.GitCommitCacheModule</Gerrit-Module>
     <Gerrit-HttpModule>com.googlesource.gerrit.plugins.branchnetwork.NetworkGraphModule</Gerrit-HttpModule>
