--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ limitations under the License.
   <modelVersion>4.0.0</modelVersion>
   <artifactId>branch-network</artifactId>
   <groupId>com.googlesource.gerrit.plugins.branchnetwork</groupId>
-  <version>2.12-rc0</version>
+  <version>2.12</version>
   <name>Gerrit - Branch network display plugin</name>
   <url>http://maven.apache.org</url>
   <properties>
