--- a/project.config
+++ b/project.config
@@ -1,9 +1,9 @@
 [access]
 	inheritFrom = Public-Plugins
 [project]
-	state = active
 	description = Plug-in to display and navigate Git branches in a HTML5 canvas network
 [access "refs/*"]
 	owner = group plugins-branch-network
+	createSignedTag = group plugins-branch-network
 [receive]
 [submit]
