Review access change
Change-Id: Ia4406d36793128bb12a450ccbab5a970ffda7ac4

--- a/project.config
+++ b/project.config
@@ -5,5 +5,6 @@
 [access "refs/*"]
 	owner = group plugins-branch-network
 	createSignedTag = group plugins-branch-network
+	exclusiveGroupPermissions = createSignedTag
 [receive]
 [submit]
